# elrs2hbridge

./: CMakeLists.txt  Makefile  README.md  avr-gcc-toolchain.cmake
src/: main.c  usi_uart.c  usi_uart.h
